--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -2,38 +2,103 @@ header {
     position: sticky;
     z-index: 200;
     top: 0%;
-    background-color: black;
+    background-color: map-get($colors , second);
     display: flex;
     justify-content: space-evenly;
 
     .logo {
-        width: 10%;
-        padding: 1% 0%;
-    }
+        @include logo-nav-responsive (10%, 1% 0%);
 
-    .logo img {
-        width: 100%;
-        display: flex;
+        img {
+            width: 100%;
+            display: flex;
+            transition: opacity 3s;
+            animation: shake infinite 1s ease-in-out;
+        }
+
+        &:hover {
+            opacity: 70%;
+        }
+
     }
 
     nav {
-        width: 40%;    
+        width: 40%;
+
         ul {
-        display: flex;
-        padding-top: 5%;
-        list-style-type: none;
+            @include nav-display-flex (row, inherit);
+
             li {
-            padding: 0% 5%;    
-                a {text-decoration: none;
-                   font-family: Arial, Helvetica, sans-serif;
-                   color: antiquewhite;
-                   font-size: 1rem;
-                   font-weight: bold;    
-                        &:hover {color: green;
-                                }
+                padding: 0% 5%;
+
+                a {
+                    text-decoration: none;
+                    font-family: Arial, Helvetica, sans-serif;
+                    color: antiquewhite;
+                    font-size: 1rem;
+                    font-weight: bold;
+
+                    &:hover {
+                        color: green;
                     }
                 }
             }
         }
+    }
+
+}
+
+@keyframes shake {
+
+    0% {
+        transform: rotate(5deg);
+    }
+
+    50% {
+        transform: rotate(-5deg);
+    }
+
+    100% {
+        transform: rotate(5deg);
+    }
+
+}
+
+
+@media screen and (min-width:0px) and (max-width: 768px) {
+
+    header {
+        position: relative;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 100%;
+        background-color: map-get($colors , second);
+
+        .logo {
+
+            @include logo-nav-responsive (50%, 5% 0%);
+
+
+            &:hover {
+                opacity: 70%;
+            }
+        }
+
+        nav {
+            width: 100%;
+
+            ul {
+                @include nav-display-flex (column, center);
+
+                li {
+                    padding: 5% 0%;
+                    text-align: center;
+                }
+
+            }
+
+        }
+    }
 
 }
