--- a/scss/_mainnosotros.scss
+++ b/scss/_mainnosotros.scss
@@ -1,11 +1,162 @@
-.nosotros{
+.nosotros {
     width: 100%;
     background-attachment: fixed;
     padding-top: 0%;
     padding-bottom: 2%;
-    section {
-        .objetivo{
-            width: 50%;
+
+    .imagenNosotros {
+        img {
+            @include imagenes_principales (60vh);
+
         }
     }
+
+    .contenedor_nosotros {
+        margin-left: 10%;
+        width: 75%;
+        margin-top: 1%;
+
+        .objetivo {
+            margin-top: 2%;
+
+            .nosotros_imagen--objetivo {
+                img {
+                    width: 100%;
+                    border-color: whitesmoke;
+                    border: solid;
+                    border-radius: 1rem;
+                    color: whitesmoke;
+                    animation: float infinite 2s ease-in-out;
+                }
+            }
+
+            .quienes_somos {
+                h1 {
+                    color: antiquewhite;
+                    text-align: center;
+                    font-family: $main_font;
+                }
+
+                p {
+                    color: antiquewhite;
+                    margin-top: 5%;
+                    font-family: $secondary_font;
+                }
+            }
+
+            .te_esperamos {
+                h3 {
+                    color: antiquewhite;
+                    text-align: center;
+                    font-family: $main_font;
+                }
+
+                @extend .quienes_somos;
+            }
+        }
+
+        .video {
+            margin-top: 2%;
+            display: flex;
+
+            iframe {
+                width: 100%;
+                height: 40vh;
+                border: solid;
+                border-color: antiquewhite;
+            }
+
+            .texto_video {
+                h2 {
+                    color: antiquewhite;
+                    text-align: center;
+                    font-family: $main_font;
+                    margin-top: map-get($margins , 5);
+                }
+
+                p {
+                    color: antiquewhite;
+                    margin-top: 5%;
+                    text-align: right;
+                    font-family: $secondary_font;
+                }
+            }
+
+
+        }
+
+    }
+
+
+}
+
+@keyframes float {
+
+    0% {
+        transform: translateY(0);
+    }
+
+    50% {
+        transform: translateY(-10px);
+    }
+
+    100% {
+        transform: translateY(0);
+    }
+
+}
+
+
+@media screen and (min-width:0px) and (max-width: 768px) {
+
+    .nosotros {
+
+        .imagenNosotros {
+            img {
+                @include imagenes_principales (30vh);
+
+            }
+        }
+
+        .contenedor_nosotros {
+            margin-left: 10%;
+            width: 80%;
+            margin-top: 5%;
+
+            .quienes_somos {
+                text-align: center;
+            }
+
+            .video {
+                display: flex;
+                flex-direction: column-reverse;
+                margin-top: map-get($margins, 10);
+
+                iframe {
+                    height: 30vh;
+                }
+
+                .texto_video {
+                    p {
+                        text-align: center;
+                    }
+                }
+            }
+
+            .objetivo {
+                margin-top: 10%;
+
+                h1 {
+                    margin-top: map-get($margins, 5);
+                }
+
+                h3 {
+                    margin-top: map-get($margins, 5);
+                }
+            }
+
+        }
+
+    }
+
 }
