--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -7,6 +7,7 @@ body {
 
 
 @import "variables.scss";
+@import "mixins.scss";
 @import "header.scss";
 @import "mainintro.scss";
 @import "mainmenu.scss";
