--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -1,11 +1,3 @@
-body {
-    background-color: black;
-    padding: 0%;
-    margin: 0%;
-}
-
-
-
 @import "variables.scss";
 @import "mixins.scss";
 @import "header.scss";
@@ -14,4 +6,5 @@ body {
 @import "mainnosotros.scss";
 @import "mainsucursales.scss";
 @import "mainregistrate.scss";
+@import "reset.scss";
 @import "footer.scss";
