Edicion de video

--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -7,4 +7,6 @@
 @import "mainsucursales.scss";
 @import "mainregistrate.scss";
 @import "reset.scss";
+@import "error404.scss";
+@import "animations.scss";
 @import "footer.scss";
