--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,9 +1,3 @@
-body {
-  background-color: black;
-  padding: 0%;
-  margin: 0%;
-}
-
 header {
   position: sticky;
   z-index: 200;
@@ -49,17 +43,6 @@ header nav ul li a:hover {
   color: green;
 }
 
-@keyframes shake {
-  0% {
-    transform: rotate(5deg);
-  }
-  50% {
-    transform: rotate(-5deg);
-  }
-  100% {
-    transform: rotate(5deg);
-  }
-}
 @media screen and (min-width: 0px) and (max-width: 768px) {
   header {
     position: relative;
@@ -137,17 +120,6 @@ main .container .quienes_somos a, main .container .nosotros .contenedor_nosotros
 }
 main .container .quienes_somos a:hover, main .container .nosotros .contenedor_nosotros .objetivo .te_esperamos a:hover, .nosotros .contenedor_nosotros .objetivo main .container .te_esperamos a:hover, main .container .ordernar_intro a:hover {
   color: green;
-}
-@keyframes float {
-  0% {
-    transform: translateY(0);
-  }
-  50% {
-    transform: translateY(-10px);
-  }
-  100% {
-    transform: translateY(0);
-  }
 }
 @media screen and (min-width: 0px) and (max-width: 768px) {
   main .imagenPrincipal img {
@@ -334,17 +306,6 @@ main .container .quienes_somos a:hover, main .container .nosotros .contenedor_no
   font-family: Arial, Helvetica, sans-serif;
 }
 
-@keyframes float {
-  0% {
-    transform: translateY(0);
-  }
-  50% {
-    transform: translateY(-10px);
-  }
-  100% {
-    transform: translateY(0);
-  }
-}
 @media screen and (min-width: 0px) and (max-width: 768px) {
   .nosotros .imagenNosotros img {
     width: 100%;
@@ -613,6 +574,148 @@ main .container .quienes_somos a:hover, main .container .nosotros .contenedor_no
   .registrate .beneficios_registro--contenedor p {
     margin-left: 3%;
     text-align: center;
+  }
+}
+body {
+  background-color: black;
+  padding: 0%;
+  margin: 0%;
+}
+
+.error {
+  width: 100%;
+  margin-bottom: 0%;
+  height: 82vh;
+  background-repeat: no-repeat;
+  background-image: url(../assets/imagen/error404.png);
+}
+.error .gus_fring {
+  width: 70%;
+}
+.error .gus_fring h1 {
+  font-size: 5rem;
+  text-align: center;
+  padding-top: 10%;
+  color: whitesmoke;
+  font-family: "Roboto", sans-serif;
+}
+.error .gus_fring p {
+  text-align: center;
+  font-size: 1rem;
+  color: whitesmoke;
+  font-family: Arial, Helvetica, sans-serif;
+}
+.error .gus_fring .return_button {
+  width: 19%;
+  height: 12vh;
+  background-color: black;
+  border: solid;
+  border-color: whitesmoke;
+  margin-left: 40%;
+  animation: error infinite 1s ease-in-out;
+}
+.error .gus_fring .return_button h2 {
+  padding: 10%;
+}
+.error .gus_fring .return_button h2 a {
+  color: whitesmoke;
+}
+.error .gus_fring .return_button:hover {
+  background-color: whitesmoke;
+  text-decoration: none;
+  border: solid;
+  border-color: black;
+}
+.error .gus_fring .return_button:hover h2 a {
+  color: black;
+  text-decoration: none;
+}
+
+@media screen and (min-width: 0px) and (max-width: 768px) {
+  .error {
+    width: 100%;
+    margin-bottom: 0%;
+    background-image: url(../assets/imagen/error404_2.png);
+    height: 90vh;
+  }
+  .error .gus_fring {
+    width: 100%;
+  }
+  .error .gus_fring h1 {
+    font-size: 5rem;
+    text-align: center;
+    padding-top: 20%;
+    color: whitesmoke;
+  }
+  .error .gus_fring p {
+    text-align: center;
+    font-size: 1rem;
+    color: whitesmoke;
+  }
+  .error .gus_fring .return_button {
+    width: 30%;
+    height: 12vh;
+    background-color: black;
+    border: solid;
+    border-color: whitesmoke;
+    margin-left: 35%;
+    animation: error infinite 1s ease-in-out;
+    margin-top: 10%;
+  }
+  .error .gus_fring .return_button h2 {
+    padding: 10%;
+  }
+  .error .gus_fring .return_button h2 a {
+    color: whitesmoke;
+  }
+  .error .gus_fring .return_button:hover {
+    background-color: whitesmoke;
+    text-decoration: none;
+    border: solid;
+    border-color: black;
+  }
+  .error .gus_fring .return_button:hover h2 a {
+    color: black;
+    text-decoration: none;
+  }
+}
+@keyframes float {
+  0% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(-10px);
+  }
+  100% {
+    transform: translateY(0);
+  }
+}
+@keyframes shake {
+  0% {
+    transform: rotate(5deg);
+  }
+  50% {
+    transform: rotate(-5deg);
+  }
+  100% {
+    transform: rotate(5deg);
+  }
+}
+@keyframes error {
+  0% {
+    transform: rotate(0);
+  }
+  25% {
+    transform: rotate(0);
+  }
+  50% {
+    transform: rotate(5deg);
+  }
+  75% {
+    transform: rotate(-5deg);
+  }
+  100% {
+    transform: rotate(0);
   }
 }
 footer {
