--- a/scss/_mainregistrate.scss
+++ b/scss/_mainregistrate.scss
@@ -10,25 +10,26 @@
         height: 60vh;
         padding: 0%;
         margin: 0;
-        background-image: url(../assets/imagen/registro_principal.png);
+        background-image: url(../assets/imagen/registro_principal-01.jpg);
         background-size: cover;
         display: flex;
         justify-content: flex-end;
+        object-fit: cover;
 
         .registrateContenedor {
             width: 50%;
-            text-align: center;
+            text-align: map-get($alineamientos, med );
             font-size: 80%;
             padding-right: 20%;
-            margin-top: map-get($margins , 2);
+            margin-top: map-get($margins , 1);
 
-            h2 {
+            h1 {
                 font-family: $main_font;
             }
 
             p {
                 font-family: $secondary_font;
-                font-size: 1rem;
+                font-size: 0.8rem;
             }
 
             form {
@@ -47,14 +48,12 @@
 
                 .submit {
                     margin-top: map-get($margins , 5);
-                    width: 20%;
-                    height: 5vh;
-                    background-color: map-get($colors, main);
+                    background-color: map-get($colors, second);
                 }
             }
         }
     }
-    
+
 
     .beneficios_registro--contenedor {
         margin-top: 2%;
@@ -81,15 +80,74 @@
 
 }
 
+@media screen and (max-width:1280px) {
 
-@media screen and (min-width:0px) and (max-width: 768px) {
     .registrate {
         .imagenRegistrate {
-            background-image: url(../assets/imagen/registro_background.jpg);
+            background-image: url(../assets/imagen/registro_principal-01.jpg);
             height: 60vh;
 
             .registrateContenedor {
-                text-align: center;
+                width: 50%;
+                text-align: map-get($alineamientos, med );
+                font-size: 80%;
+                padding-right: 20%;
+                margin-top: map-get($margins , 1);
+
+                h1 {
+                    color: map-get($colors , second);
+                    font-family: $main_font;
+                    font-size: 1.5rem;
+                }
+
+                p {
+                    font-family: $secondary_font;
+                    color: map-get($colors , second);
+                }
+
+              }
+
+            }
+        
+            .beneficios_registro--contenedor {
+                margin-top: 2%;
+                color: whitesmoke;
+                margin-left: 15%;
+                width: 65%;
+                backdrop-filter: blur(12px);
+                border-radius: 1rem;
+                padding: 2%;
+        
+                h2 {
+                    font-family: $main_font;
+                    font-size: 1.3rem;
+                }
+        
+                p {
+                    margin-top: 2%;
+                    font-family: $secondary_font;
+                    font-size: 0.8rem;
+                }
+        
+                .lista_beneficios {
+                    margin-left: 3%;
+                    font-size: 0.8rem;
+                }
+            }
+        
+        }
+    
+}
+
+
+@media screen and (max-width: 991px) {
+    .registrate {
+        .imagenRegistrate {
+            background-image: url(../assets/imagen/registro_background.jpg);
+            height: 70vh;
+
+            .registrateContenedor {
+                text-align: map-get($alineamientos, med);
                 backdrop-filter: blur(5px);
                 width: 100%;
                 padding: 5%;
@@ -99,19 +157,33 @@
                 h1 {
                     color: map-get($colors , main);
                     font-family: $main_font;
+                    font-size: 2rem;
                 }
+
+                p {
+                    font-size: 1rem;
+                    color: map-get($colors , main);
+                }
+
             }
         }
 
         .beneficios_registro--contenedor {
-            margin-top: map-get($margins , 10 );
+            margin-top: map-get($margins , 0);
             width: 80%;
             margin-left: 10%;
-            h2 {padding: 2%;
-                text-align: center;
-                color: map-get($colors , third );}
-            p{margin-left: 3%;
-            text-align: center;}
+
+            h2 {
+                padding: 2%;
+                text-align: map-get($alineamientos, med );
+                color: map-get($colors , third);
+                font-size: 1.5rem;
+            }
+
+            p {
+                margin-left: 3%;
+                text-align: map-get($alineamientos, med );
+            }
         }
     }
 }
