--- a/scss/_mainmenu.scss
+++ b/scss/_mainmenu.scss
@@ -10,11 +10,13 @@
 
     img {
         @include imagenes_principales (60vh);
+        object-fit: cover;
 
     }
 
     .contenedorMenu {
-        @include contenedor-paginas-elementos (75%, 1%, left);
+        width: 80%;
+        margin-left: 10%;
 
         h2 {
             @include menu-intro-texto ($main_font, 5%);
@@ -38,6 +40,7 @@
                 .card-body {
                     background-color: map-get($colors, second);
                     @extend .card-container;
+                    border-width:0.1vh;
 
                     .card-title {
                         @include card-body-text($main_font, 2%);
