--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -7,6 +7,18 @@ $colors:(
     third: darkgreen
 );
 
+$font_p: (
+    1: 0.1rem,
+    2: 0.2rem,
+    3: 0.3rem,
+    4: 0.4rem,
+    5: 0.5rem,
+    6: 0.6rem,
+    7: 0.7rem,
+    8: 0.8rem,
+    9: 0.9rem,    
+);
+
 $margins:(
     0: 0%,
     1: 1%,
@@ -39,14 +51,14 @@ $alineamientos:(
 );
 
 $grosores:(
-    1: 100,
-    2: 200,
-    3: 300,
-    4: 400,
-    5: 500,
-    6: 600,
-    7: 700,
-    8: 800,
-    9: 900,
-    10: 1000,
+    1: 1px,
+    2: 2px,
+    3: 3px,
+    4: 4px,
+    5: 5px,
+    6: 6px,
+    7: 7px,
+    8: 8px,
+    9: 9px,
+    10: 10px,
 )
