--- a/scss/estilos.css
+++ b/scss/estilos.css
@@ -4,7 +4,8 @@ header {
   top: 0%;
   background-color: black;
   display: flex;
-  justify-content: space-evenly;
+  justify-content: center;
+  width: 100%;
 }
 header .logo {
   width: 10%;
@@ -20,7 +21,7 @@ header .logo:hover {
   opacity: 70%;
 }
 header nav {
-  width: 40%;
+  width: 60%;
 }
 header nav ul {
   display: flex;
@@ -86,10 +87,18 @@ main .imagenPrincipal img {
   height: 60vh;
 }
 main .container {
+  justify-content: center;
+  align-items: center;
+  width: 80%;
   margin-top: 1%;
+  text-align: left;
 }
 main .container .introNosotros {
   margin-top: 2%;
+}
+main .container .introNosotros .columna_nosotros {
+  padding-left: 0%;
+  margin-left: 0%;
 }
 main .container .introNosotros .imagen_intro--nosotros img {
   width: 100%;
@@ -99,7 +108,26 @@ main .container .introNosotros .imagen_intro--nosotros img {
   animation: float infinite 2s ease-in-out;
   color: whitesmoke;
 }
-main .container .introNosotros .imagen_intro--menu img {
+main .container .introNosotros .quienes_somos, main .container .introNosotros .nosotros .contenedor_nosotros .objetivo .te_esperamos, .nosotros .contenedor_nosotros .objetivo main .container .introNosotros .te_esperamos, main .container .introNosotros .nosotros .contenedor_nosotros .objetivo .te_esperamos h2, .nosotros .contenedor_nosotros .objetivo main .container .introNosotros .te_esperamos h2, main .container .introNosotros .introMenu .ordernar_intro, main .container .introMenu .introNosotros .ordernar_intro, main .container .introNosotros .introMenu .ordernar_intro h2, main .container .introMenu .introNosotros .ordernar_intro h2, main .container .introNosotros .quienes_somos h2 {
+  color: antiquewhite;
+  text-align: center;
+}
+main .container .introNosotros .quienes_somos h2, main .container .introNosotros .nosotros .contenedor_nosotros .objetivo .te_esperamos h2, .nosotros .contenedor_nosotros .objetivo main .container .introNosotros .te_esperamos h2, main .container .introNosotros .introMenu .ordernar_intro h2, main .container .introMenu .introNosotros .ordernar_intro h2 {
+  font-size: 2rem;
+  font-family: "Roboto", sans-serif;
+}
+main .container .introNosotros .quienes_somos h3, main .container .introNosotros .nosotros .contenedor_nosotros .objetivo .te_esperamos h3, .nosotros .contenedor_nosotros .objetivo main .container .introNosotros .te_esperamos h3, main .container .introNosotros .introMenu .ordernar_intro h3, main .container .introMenu .introNosotros .ordernar_intro h3 {
+  margin-top: 10%;
+}
+main .container .introNosotros .quienes_somos a, main .container .introNosotros .nosotros .contenedor_nosotros .objetivo .te_esperamos a, .nosotros .contenedor_nosotros .objetivo main .container .introNosotros .te_esperamos a, main .container .introNosotros .introMenu .ordernar_intro a, main .container .introMenu .introNosotros .ordernar_intro a {
+  text-decoration: none;
+  color: whitesmoke;
+  font-family: "Roboto", sans-serif;
+}
+main .container .introNosotros .quienes_somos a:hover, main .container .introNosotros .nosotros .contenedor_nosotros .objetivo .te_esperamos a:hover, .nosotros .contenedor_nosotros .objetivo main .container .introNosotros .te_esperamos a:hover, main .container .introNosotros .introMenu .ordernar_intro a:hover, main .container .introMenu .introNosotros .ordernar_intro a:hover {
+  color: green;
+}
+main .container .imagen_intro--menu img {
   width: 100%;
   border-color: whitesmoke;
   border: solid;
@@ -107,26 +135,9 @@ main .container .introNosotros .imagen_intro--menu img {
   color: whitesmoke;
   animation: float infinite 2s ease-in-out;
 }
-main .container .quienes_somos, main .container .nosotros .contenedor_nosotros .objetivo .te_esperamos, .nosotros .contenedor_nosotros .objetivo main .container .te_esperamos, main .container .nosotros .contenedor_nosotros .objetivo .te_esperamos h2, .nosotros .contenedor_nosotros .objetivo main .container .te_esperamos h2, main .container .ordernar_intro, main .container .ordernar_intro h2, main .container .quienes_somos h2 {
-  color: antiquewhite;
-  text-align: center;
-}
-main .container .quienes_somos h2, main .container .nosotros .contenedor_nosotros .objetivo .te_esperamos h2, .nosotros .contenedor_nosotros .objetivo main .container .te_esperamos h2, main .container .ordernar_intro h2 {
-  font-size: 2rem;
-  font-family: "Roboto", sans-serif;
-}
-main .container .quienes_somos a, main .container .nosotros .contenedor_nosotros .objetivo .te_esperamos a, .nosotros .contenedor_nosotros .objetivo main .container .te_esperamos a, main .container .ordernar_intro a {
-  text-decoration: none;
-  color: whitesmoke;
-  font-family: "Roboto", sans-serif;
-}
-main .container .quienes_somos a:hover, main .container .nosotros .contenedor_nosotros .objetivo .te_esperamos a:hover, .nosotros .contenedor_nosotros .objetivo main .container .te_esperamos a:hover, main .container .ordernar_intro a:hover {
-  color: green;
-}
-main .container .ordernar_intro {
+main .container .introMenu {
   margin-top: 2%;
 }
-
 @media screen and (min-width: 0px) and (max-width: 768px) {
   main .imagenPrincipal img {
     width: 100%;
@@ -139,10 +150,10 @@ main .container .ordernar_intro {
     width: 90%;
     margin-left: 5%;
   }
-  main .container .introNosotros .quienes_somos, main .container .introNosotros .nosotros .contenedor_nosotros .objetivo .te_esperamos, .nosotros .contenedor_nosotros .objetivo main .container .introNosotros .te_esperamos, main .container .introNosotros .nosotros .contenedor_nosotros .objetivo .te_esperamos h2, main .container .nosotros .contenedor_nosotros .objetivo .te_esperamos .introNosotros h2, .nosotros .contenedor_nosotros .objetivo main .container .introNosotros .te_esperamos h2, .nosotros .contenedor_nosotros .objetivo main .container .te_esperamos .introNosotros h2, main .container .introNosotros .quienes_somos h2, main .container .quienes_somos .introNosotros h2, main .container .introNosotros .ordernar_intro, main .container .introNosotros .ordernar_intro h2, main .container .ordernar_intro .introNosotros h2 {
+  main .container .introNosotros .quienes_somos, main .container .introNosotros .nosotros .contenedor_nosotros .objetivo .te_esperamos, .nosotros .contenedor_nosotros .objetivo main .container .introNosotros .te_esperamos, main .container .introNosotros .nosotros .contenedor_nosotros .objetivo .te_esperamos h2, .nosotros .contenedor_nosotros .objetivo main .container .introNosotros .te_esperamos h2, main .container .introNosotros .quienes_somos h2, main .container .introNosotros .introMenu .ordernar_intro, main .container .introMenu .introNosotros .ordernar_intro, main .container .introNosotros .introMenu .ordernar_intro h2, main .container .introMenu .introNosotros .ordernar_intro h2 {
     margin-top: 5%;
   }
-  main .container .introNosotros .quienes_somos p, main .container .introNosotros .nosotros .contenedor_nosotros .objetivo .te_esperamos p, .nosotros .contenedor_nosotros .objetivo main .container .introNosotros .te_esperamos p, main .container .nosotros .contenedor_nosotros .objetivo .te_esperamos .introNosotros h2 p, .nosotros .contenedor_nosotros .objetivo main .container .te_esperamos .introNosotros h2 p, main .container .quienes_somos .introNosotros h2 p, main .container .introNosotros .ordernar_intro p, main .container .ordernar_intro .introNosotros h2 p {
+  main .container .introNosotros .quienes_somos p, main .container .introNosotros .nosotros .contenedor_nosotros .objetivo .te_esperamos p, .nosotros .contenedor_nosotros .objetivo main .container .introNosotros .te_esperamos p, main .container .introNosotros .introMenu .ordernar_intro p, main .container .introMenu .introNosotros .ordernar_intro p {
     margin-top: 5%;
     color: whitesmoke;
     font-family: Arial, Helvetica, sans-serif;
@@ -172,12 +183,12 @@ main .container .ordernar_intro {
 .menu img {
   width: 100%;
   height: 60vh;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 .menu .contenedorMenu {
+  width: 80%;
   margin-left: 10%;
-  width: 75%;
-  margin-top: 1%;
-  text-align: left;
 }
 .menu .contenedorMenu h2 {
   margin-top: 5%;
@@ -201,6 +212,7 @@ main .container .ordernar_intro {
 }
 .menu .contenedorMenu .cards .card-container .card-body {
   background-color: black;
+  border-width: 0.1vh;
 }
 .menu .contenedorMenu .cards .card-container .card-body .card-title, .menu .contenedorMenu .cards .card-container .card-body .card-prize {
   color: whitesmoke;
@@ -232,7 +244,8 @@ main .container .ordernar_intro {
     height: 30vh;
   }
   .menu .contenedorMenu {
-    margin-left: 10%;
+    justify-content: center;
+    align-items: center;
     width: 80%;
     margin-top: 5%;
     text-align: center;
@@ -260,7 +273,11 @@ main .container .ordernar_intro {
 }
 .nosotros .contenedor_nosotros {
   margin-left: 10%;
-  width: 75%;
+  justify-content: center;
+  align-items: center;
+  width: 80%;
+  margin-top: 1%;
+  text-align: left;
   margin-top: 1%;
 }
 .nosotros .contenedor_nosotros .objetivo {
@@ -274,12 +291,12 @@ main .container .ordernar_intro {
   color: whitesmoke;
   animation: float infinite 2s ease-in-out;
 }
-.nosotros .contenedor_nosotros .objetivo .quienes_somos h1, .nosotros .contenedor_nosotros .objetivo .te_esperamos h1, main .container .quienes_somos .nosotros .contenedor_nosotros .objetivo h2 h1, .nosotros .contenedor_nosotros .objetivo main .container .ordernar_intro h1, main .container .nosotros .contenedor_nosotros .objetivo .ordernar_intro h1, main .container .ordernar_intro .nosotros .contenedor_nosotros .objetivo h2 h1 {
+.nosotros .contenedor_nosotros .objetivo .quienes_somos h1, .nosotros .contenedor_nosotros .objetivo .te_esperamos h1, main .container .introNosotros .quienes_somos .nosotros .contenedor_nosotros .objetivo h2 h1, .nosotros .contenedor_nosotros .objetivo main .container .introMenu .ordernar_intro h1, main .container .introMenu .nosotros .contenedor_nosotros .objetivo .ordernar_intro h1, main .container .introNosotros .introMenu .ordernar_intro .nosotros .contenedor_nosotros .objetivo h2 h1, main .container .introMenu .introNosotros .ordernar_intro .nosotros .contenedor_nosotros .objetivo h2 h1 {
   color: antiquewhite;
   text-align: center;
   font-family: "Roboto", sans-serif;
 }
-.nosotros .contenedor_nosotros .objetivo .quienes_somos p, .nosotros .contenedor_nosotros .objetivo .te_esperamos p, main .container .quienes_somos .nosotros .contenedor_nosotros .objetivo h2 p, .nosotros .contenedor_nosotros .objetivo main .container .ordernar_intro p, main .container .nosotros .contenedor_nosotros .objetivo .ordernar_intro p, main .container .ordernar_intro .nosotros .contenedor_nosotros .objetivo h2 p {
+.nosotros .contenedor_nosotros .objetivo .quienes_somos p, .nosotros .contenedor_nosotros .objetivo .te_esperamos p, main .container .introNosotros .quienes_somos .nosotros .contenedor_nosotros .objetivo h2 p, .nosotros .contenedor_nosotros .objetivo main .container .introMenu .ordernar_intro p, main .container .introMenu .nosotros .contenedor_nosotros .objetivo .ordernar_intro p, main .container .introNosotros .introMenu .ordernar_intro .nosotros .contenedor_nosotros .objetivo h2 p, main .container .introMenu .introNosotros .ordernar_intro .nosotros .contenedor_nosotros .objetivo h2 p {
   color: antiquewhite;
   margin-top: 5%;
   font-family: Arial, Helvetica, sans-serif;
@@ -322,7 +339,7 @@ main .container .ordernar_intro {
     width: 80%;
     margin-top: 5%;
   }
-  .nosotros .contenedor_nosotros .quienes_somos, .nosotros .contenedor_nosotros main .container .quienes_somos h2, main .container .quienes_somos .nosotros .contenedor_nosotros h2, .nosotros .contenedor_nosotros main .container .ordernar_intro, main .container .nosotros .contenedor_nosotros .ordernar_intro, .nosotros .contenedor_nosotros main .container .ordernar_intro h2, main .container .ordernar_intro .nosotros .contenedor_nosotros h2, .nosotros .contenedor_nosotros .objetivo .te_esperamos, main .container .nosotros .contenedor_nosotros .objetivo .te_esperamos h2, .nosotros .contenedor_nosotros .objetivo main .container .te_esperamos h2 {
+  .nosotros .contenedor_nosotros .quienes_somos, .nosotros .contenedor_nosotros main .container .introNosotros .quienes_somos h2, main .container .introNosotros .quienes_somos .nosotros .contenedor_nosotros h2, .nosotros .contenedor_nosotros main .container .introMenu .ordernar_intro, main .container .introMenu .nosotros .contenedor_nosotros .ordernar_intro, .nosotros .contenedor_nosotros main .container .introNosotros .introMenu .ordernar_intro h2, main .container .introNosotros .introMenu .ordernar_intro .nosotros .contenedor_nosotros h2, .nosotros .contenedor_nosotros main .container .introMenu .introNosotros .ordernar_intro h2, main .container .introMenu .introNosotros .ordernar_intro .nosotros .contenedor_nosotros h2, .nosotros .contenedor_nosotros .objetivo .te_esperamos, main .container .introNosotros .nosotros .contenedor_nosotros .objetivo .te_esperamos h2, .nosotros .contenedor_nosotros .objetivo main .container .introNosotros .te_esperamos h2 {
     text-align: center;
   }
   .nosotros .contenedor_nosotros .video {
@@ -358,10 +375,13 @@ main .container .ordernar_intro {
   height: 60vh;
 }
 .sucursales .intro_sucursales, .sucursales .seccion_sucursales {
-  margin-left: 10%;
-  width: 75%;
+  width: 80%;
   margin-top: 2%;
+  margin-left: 10%;
   color: whitesmoke;
+}
+.sucursales .seccion_sucursales {
+  margin-top: 5%;
 }
 .sucursales .seccion_sucursales .contenedor_moreno, .sucursales .seccion_sucursales .contenedor_isidro_casanova {
   width: 100%;
@@ -417,18 +437,18 @@ main .container .ordernar_intro {
     height: 30vh;
   }
   .sucursales .intro_sucursales, .sucursales .seccion_sucursales {
-    margin-left: 10%;
     width: 80%;
     margin-top: 5%;
+    margin-left: 10%;
     color: whitesmoke;
   }
   .sucursales .intro_sucursales p, .sucursales .seccion_sucursales p {
     margin-top: 5%;
   }
   .sucursales .seccion_sucursales {
-    margin-left: 10%;
     width: 80%;
     margin-top: 5%;
+    margin-left: 10%;
     color: whitesmoke;
   }
   .sucursales .seccion_sucursales .contenedor_moreno, .sucursales .seccion_sucursales .contenedor_isidro_casanova {
@@ -528,9 +548,7 @@ main .container .ordernar_intro {
 }
 .registrate .imagenRegistrate .registrateContenedor form .submit {
   margin-top: 5%;
-  width: 20%;
-  height: 5vh;
-  background-color: whitesmoke;
+  background-color: black;
 }
 .registrate .beneficios_registro--contenedor {
   margin-top: 2%;
